--- a/TODO.txt
+++ b/TODO.txt
@@ -7,7 +7,7 @@ fix brakes
 add drag to car
 add car damage/destruction
 add building entrance
-refactor key handler so keys don't have to be predefined
+X refactor key handler so keys don't have to be predefined
 create another gas station section on straightaway
 add map handling funcitons for custom instances of sections through the map worker
 fix gas pump position
