--- a/TODO.txt
+++ b/TODO.txt
@@ -32,7 +32,7 @@ add WASD control scheme
 change inventory to use click to pickup and click to drop
 disable inventory when paused
 handle dropping ammo on guns
-display gun ammo count in inventory
+X display gun ammo count in inventory
 HUD ammo count
 
 EDITOR
