--- a/TODO.txt
+++ b/TODO.txt
@@ -29,7 +29,7 @@ add zombies randomly to map - based on building population of section?
 generalize animation handling
 X create event listeners model for HUD/health meter
 X add WASD control scheme
-change inventory to use click to pickup and click to drop
+X change inventory to use click to pickup and click to drop
 X disable inventory toggle when paused
 handle dropping ammo on guns
 X display gun ammo count in inventory
@@ -37,6 +37,9 @@ HUD ammo count
 support touching list without having to actively run into things
 don't move the arm if the mouse is over an inventory hud
 X disable mouse clicks when paused
+flashlight
+lantern
+fix Zombie hitbox
 
 EDITOR
 remove current collidible code
@@ -63,4 +66,16 @@ X clean up zombie outlines
 clean up zombie's standing legs (make back leg angle outward)
 ammo sprites
 shotgun sprite
+flashlight sprite
+lantern sprite
+add L&R hand graphics to to DudeHands HUD
 
+CARS
+Police Car
+Pickup Truck
+Honda Fit (Babycar)
+Prius
+Hummer
+Another Sedan
+Sports Car
+Bus
