--- a/TODO.txt
+++ b/TODO.txt
@@ -37,18 +37,16 @@ HUD ammo count
 support touching list without having to actively run into things
 X don't move the arm if the mouse is over an inventory hud
 X disable mouse clicks when paused
-flashlight
-lantern
-shotgun
+X flashlight
 fix Zombie hitbox
 save inventory state
 
-EDITOR
+*EDITOR*
 remove current collidible code
 add building boundries creation
 add building entrance creation
 
-ART
+*ART*
 add spiderwebbed windows to car's sprite
 add destroyed car state to car's sprite
 update color on gas station
@@ -66,14 +64,10 @@ trees
 shrubs
 X clean up zombie outlines
 clean up zombie's standing legs (make back leg angle outward)
-ammo sprites
-shotgun sprite
-X flashlight sprite
-lantern sprite
 add L&R hand graphics to DudeHands HUD
 add custom cursor hand graphics for inventory
 
-CARS
+*CARS*
 Police Car
 Pickup Truck
 Honda Fit (Babycar)
@@ -82,3 +76,12 @@ Hummer
 Another Sedan
 Sports Car
 Bus
+
+*PICKUPS*
+lantern
+shotgun
+rifle
+bat
+golf club
+rubber hose
+spare tire
