--- a/TODO.txt
+++ b/TODO.txt
@@ -17,10 +17,11 @@ X don't move the arm if the mouse is over an inventory hud
 X disable mouse clicks when paused
 X create HUD for vehicle inventory
 X support touching list without having to actively run into things
+X make zombies/dude render in order according to vertical position
+X add building entrance
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
-add building entrance
 create another gas station section on straightaway
 add map handling functions for custom instances of sections through the map worker
 fix gas pump position
@@ -28,7 +29,6 @@ tune Honda's performance
 create HUD for building inventory
 add trees randomly to map
 render trees -- make transparent when colliding with sprite
-make zombies/dude render in order according to vertical position
 convert everything to radians
 make object capitalization consistent
 add zombie blood tire tracks
@@ -43,6 +43,8 @@ support headshots
 save inventory state
 update inventory to be usable at night
 car inventory should disappear when walk away
+building inventory should disappear when leave
+building inventory should appear when entering
 create HUD for vehicle status
 broken headlights
 headlight repair
