--- a/TODO.txt
+++ b/TODO.txt
@@ -23,6 +23,7 @@ X building inventory should disappear when leave
 X building inventory should appear when entering
 X create HUD for building inventory
 X handle dropping ammo on guns
+X add reload key
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
@@ -50,7 +51,6 @@ broken headlights
 headlight repair
 fix barrel 'sliding'
 fix weird map loading bug with gas station and start intersection
-add reload key
 
 *EDITOR*
 remove current collidible code
