update TODO - already fixed this bug

--- a/TODO.txt
+++ b/TODO.txt
@@ -31,6 +31,7 @@ X support saving when dude is in a building
 X ejecting ammo from guns
 X save building inventory state
 X car inventory should disappear when walk away
+X fix weird map loading bug with gas station and start intersection
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
@@ -54,7 +55,6 @@ create HUD for vehicle status
 broken headlights
 headlight repair
 fix barrel 'sliding'
-fix weird map loading bug with gas station and start intersection
 support shooting out of car
 
 *EDITOR*
