fuel gauge now using css transforms

--- a/TODO.txt
+++ b/TODO.txt
@@ -35,6 +35,7 @@ X fix weird map loading bug with gas station and start intersection
 X support headshots
 X fix Zombie hitbox
 X add fuel gauge
+X add fuel consumption -- cars don't work without fuel
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
@@ -57,7 +58,6 @@ broken headlights
 headlight repair
 fix barrel 'sliding'
 support shooting out of car
-add fuel consumption -- cars don't work without fuel
 getting fuel from gas pumps
 transfering fuel between cars
 
