--- a/TODO.txt
+++ b/TODO.txt
@@ -63,6 +63,7 @@ fix barrel 'sliding'
 support shooting out of car
 transfering fuel between cars
 make tip not obscure sprites
+vertically center items in dude's hands
 
 *EDITOR*
 remove current collidible code
