--- a/TODO.txt
+++ b/TODO.txt
@@ -39,6 +39,7 @@ X add fuel consumption -- cars don't work without fuel
 X add tooltips for dude touch interactions
 X getting fuel from gas pumps
 X add inventory tool tips
+X vertically center items in dude's hands
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
@@ -63,7 +64,6 @@ fix barrel 'sliding'
 support shooting out of car
 transfering fuel between cars
 make tip not obscure sprites
-vertically center items in dude's hands
 add names to building and car's inventory displays
 gas pumps can take damage
 
