fix bullets not travelling past mouse cursor

--- a/TODO.txt
+++ b/TODO.txt
@@ -44,6 +44,7 @@ X add names to building and car's inventory displays
 X update inventory to be usable at night
 X add zombie blood tire tracks
 X fix prone zombie bullet collision
+X fix bullets not travelling past mouse cursor
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
@@ -69,7 +70,8 @@ make tip not obscure sprites
 gas pumps can take damage
 make zombies attracted to noise
 make zombies attracted to light
-fix bullets not travelling past mouse cursor
+firearm reload times
+firearm between shot timeout
 
 *EDITOR*
 remove current collidible code
