--- a/TODO.txt
+++ b/TODO.txt
@@ -48,12 +48,12 @@ X fix bullets not travelling past mouse cursor
 X support melee weapons
 X limit the number of bloodsplatters in play at a given time
 X add trees randomly to map
+X fix gas pump position
 make zombie collision response more natural
 add drag to car
 add car damage/destruction
 create another gas station section on straightaway
 add map handling functions for custom instances of sections through the map worker
-fix gas pump position
 tune Honda's performance
 make trees transparent when touching sprite
 convert everything to radians
@@ -79,10 +79,11 @@ add dude roll/damage when jumping out of car
 use rotateX 3d transition for driving over rough ground
 
 *EDITOR*
-remove current collidible code
+X remove current collidible code
 add building boundries creation
 add building entrance creation
 name buildings
+update to use new sprite rendering code
 
 *ART*
 X add rifle/shotgun to dude's sprite
@@ -107,6 +108,7 @@ clean up zombie's standing legs (make back leg angle outward)
 add L&R hand graphics to DudeHands HUD
 add custom cursor hand graphics for inventory
 add custom cursor hand graphics for filling up the gas tank
+add zombie hit car animation
 
 *CARS*
 Police Car
